[gd_scene load_steps=2 format=3 uid="uid://bb0m10tpocqjx"]

[ext_resource type="Script" path="res://Scripts/DiceUI.gd" id="1_y82aq"]

[node name="DiceUI" type="Panel"]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y82aq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.0138645, 0.0667133, 0.106552, 1)

[node name="DiceMargin" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="DiceVBox" type="VBoxContainer" parent="MarginContainer/DiceMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ExitMargin" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ExitVBox" type="VBoxContainer" parent="MarginContainer/ExitMargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ExitButton" type="Button" parent="MarginContainer/ExitMargin/ExitVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
